Updated CAD image, add link to current TDR on website. Add graphic file of CAD with arrows.

--- a/Technical Report/TDR/Citations.bib
+++ b/Technical Report/TDR/Citations.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Benjamin Armentor at 2020-06-20 19:43:21 -0500 
+%% Created for Benjamin Armentor at 2020-06-20 22:25:55 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{Redmon:18a,
+	Author = {Joseph Redmon and Ali Farhadi},
+	Date-Added = {2020-06-20 22:21:26 -0500},
+	Date-Modified = {2020-06-20 22:25:32 -0500},
+	Institution = {University of Washington},
+	Title = {YOLOv3: An Incremental Improvement},
+	Year = {2018}}
 
 @electronic{Bogdon:19a,
 	Author = {Chris Bogdon},
